CGE-135 refactoring with using regexp patterns regrouped for tests